# hackaton_sber_auto

./: .gitignore  .pre-commit-config.yaml  README.md  ga_hits_valid.pkl  hac v2.ipynb  hac v3.ipynb  hac.ipynb  hac_v5.ipynb  pipeline_valid.ipynb  pyproject.toml  готовая презентация_хакатон_команда_TEAM-A.pptx  текст для презентации 2.docx
.github/workflows/: black.yml
app/: Dockerfile  main.py  pyproject.toml  readme.md  requirements.txt
old_version/: hac v2.ipynb  hac.ipynb
