[project]
name = "hackaton-sber-auto"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly-express (>=0.4.1,<0.5.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "modin (>=0.32.0,<0.33.0)",
    "pre-commit (>=4.2.0,<5.0.0)",
    "black[jupyter] (>=25.1.0,<26.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
