[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "Maxim Gorozii",email = "mgorozii@gmail.com"}
]
readme = "readme.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false
